--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "clsx": "^2.1.1",
     "next": "^14.2.1",
+    "next-view-transitions": "^0.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
