--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.2",
     "eslint-plugin-tailwindcss": "^3.15.1",
+    "framer-motion": "^11.1.7",
+    "lucide-react": "^0.373.0",
     "next": "^14.2.1",
     "next-view-transitions": "^0.1.1",
     "react": "18.2.0",
