--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "next": "^14.2.1",
     "next-view-transitions": "^0.1.1",
     "react": "18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
     "react-resizable-panels": "^2.0.18",
     "react-twc": "^1.4.1",
     "server-only": "^0.0.1",
