feat(keys): :closed_lock_with_key: Add Stocks API Key

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.2",
