--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.373.0",
     "next": "^14.2.1",
     "next-view-transitions": "^0.1.1",
+    "nuqs": "^1.17.1",
     "react": "18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "18.2.0",
@@ -53,6 +54,7 @@
     "react-icons": "^5.1.0",
     "react-resizable-panels": "^2.0.18",
     "react-twc": "^1.4.1",
+    "recharts": "^2.12.6",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
