--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.2.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
