--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "axios": "^1.6.8",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -69,6 +70,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.11",
     "@types/react": "^18.3.1",
