--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@clerk/elements": "^0.3.3",
-    "@clerk/nextjs": "^5.0.7",
+    "@auth/prisma-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.3.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -40,9 +40,6 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.35.1",
-    "@trpc/client": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
     "axios": "^1.6.8",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
@@ -53,6 +50,7 @@
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.373.0",
     "next": "^14.2.3",
+    "next-auth": "5.0.0-beta.19",
     "next-view-transitions": "^0.1.1",
     "nuqs": "^1.17.2",
     "react": "18.2.0",
