--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "5.11.0",
+    "@prisma/client": "^5.15.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -49,8 +50,9 @@
     "eslint-plugin-tailwindcss": "^3.15.1",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.373.0",
-    "next": "^14.2.3",
+    "next": "^14.2.4",
     "next-auth": "5.0.0-beta.19",
+    "next-safe-action": "^6.2.0",
     "next-view-transitions": "^0.1.1",
     "nuqs": "^1.17.2",
     "react": "18.2.0",
@@ -82,7 +84,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "5.11.0",
+    "prisma": "5.15.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
