--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,11 @@
     "keys",
     "global",
     "auth"
+  ],
+  "cSpell.words": [
+    "james",
+    "lebron",
+    "signin",
+    "timeframe"
   ]
 }
