--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": [
     "next/core-web-vitals",
     "plugin:tailwindcss/recommended"
-  ]
+  ],
+  "rules": {
+    "react/no-unescaped-entities": "off"
+  }
 }
