--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.35.1",
+    "@tanstack/react-query-devtools": "^5.51.24",
     "axios": "^1.6.8",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
