--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -22,7 +22,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
@@ -30,7 +30,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -54,18 +54,22 @@
     "next": "^14.2.4",
     "next-auth": "5.0.0-beta.19",
     "next-safe-action": "^6.2.0",
+    "next-themes": "^0.3.0",
     "next-view-transitions": "^0.1.1",
+    "nodemailer": "^6.9.14",
     "nuqs": "^1.17.2",
+    "prisma": "^5.18.0",
     "react": "18.2.0",
     "react-country-flag": "^3.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.4",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
     "react-twc": "^1.4.1",
     "recharts": "^2.12.7",
     "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -75,6 +79,7 @@
     "@types/canvas-confetti": "^1.6.4",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.11",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
@@ -85,7 +90,6 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "5.15.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
