--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@auth/prisma-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -62,7 +62,7 @@
     "next-view-transitions": "^0.1.1",
     "nodemailer": "^6.9.14",
     "nuqs": "^1.17.2",
-    "prisma": "^5.18.0",
+    "prisma": "~5.19.1",
     "react": "18.2.0",
     "react-country-flag": "^3.1.0",
     "react-day-picker": "^8.10.1",
